--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,30 @@
     "cstdlib": "c",
     "stdbool.h": "c",
     "assert.h": "c",
-    "array": "c"
+    "array": "c",
+    "atomic": "cpp",
+    "bit": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "concepts": "cpp",
+    "cstdarg": "cpp",
+    "cstddef": "cpp",
+    "cstdio": "cpp",
+    "cstring": "cpp",
+    "ctime": "cpp",
+    "cwchar": "cpp",
+    "cwctype": "cpp",
+    "deque": "cpp",
+    "unordered_map": "cpp",
+    "vector": "cpp",
+    "iterator": "cpp",
+    "memory": "cpp",
+    "memory_resource": "cpp",
+    "initializer_list": "cpp",
+    "iosfwd": "cpp",
+    "iostream": "cpp",
+    "limits": "cpp",
+    "numbers": "cpp",
+    "stdexcept": "cpp"
   }
 }
